<resources>
    <string name="app_name">Red Habitat Alpha</string>
    <!--Actividad Log in -->
    <string name="hint_email">Asesor</string>
    <string name="hint_password">Clave Interna</string>
    <string name="btn_sign_up">Iniciar Sesión</string>
    <string name="err_msg_email">Asesor invalido</string>
    <string name="err_msg_password">Ingresar contraseña</string>
    <string name="Shared_Preferences_User">userName</string>
    <!--Actividad Calendario-->
    <string name="visitas">Visitas</string>
    <string name="visitas_programadas">Visitas programadas</string>
    <string name="visitas_finalizadas">Visitas finalizadas</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sabado</string>
    <string name="domingo">Domingo</string>
    <string name="cita_finalizada">Cita finalizada</string>
    <string name="ver_mas">ver más...</string>
    <string name="cerrarsesion">Cerrar sesión</string>
    <string name="asesor">Asesor</string>


    <!--Encuesta-->
    <string name="pregunta_uno">¿Como calificaría el inmueble respecto a sus requerimientos?</string>
    <string name="tomandoreferencia">Tomando como referencia que 1 es bajo y 6 alto.</string>
    <string name="pregunta_dos">¿Por qué cubre o no cubre sus requerimientos?</string>
    <string name="pregunta_tres">¿Se encuentra dentro de su presupuesto?</string>
    <string name="pregunta_cuatro">¿Considerarías el inmueble dentro de sus opciones de compra o renta?</string>
    <string name="pregunta_cinco">Recibió la información que requería respecto a la propiedad y aclaró sus dudas</string>
    <string name="pregunta_seis">El asesor acudió de manera puntual a la cita:</string>
    <string name="pregunta_siete">La atención que recibió por parte del asesor fue:</string>
    <string name="pregunta_ocho">¿Encuentra alguna objeción por la cual descartaría el inmueble de sus opciones?</string>
    <string name="pregunta_nueve">Desea dejar un comentario.</string>
    <string name="finalizar_cuestionario">Finalizar cuestionario</string>
    <!--Botones de preguntas-->
    <string name="Afirmar">Si</string>
    <string name="Negar">No</string>
    <string name="siguiente">Siguiente</string>
    <string name="buena">BUENA</string>
    <string name="regular">REGULAR</string>
    <string name="mala">MALA</string>
    <!--Utilidades-->
    <string name="indice"> de 8</string>
    <!--Dialogos-->
    <string name="comentario_del_asesor">Comentario del asesor.</string>
    <string name="bt_aceptar_dialogos">Aceptar</string>
    <string name="pregunta_realizar_cuestionaro">Deseas realizar cuestionario</string>
    <string name="bt_cancelar_dialogos">Cancelar</string>
    <string name="comentrio_al_propietario_default">No dejo comentario hacia el propietario</string>

    <!--No Hay servidor-->
    <string name="error_server">"Estamos teniendo problemas en este momento intente mas tarde"</string>
    <!--Hide Texts-->
    <string name="escribir_aqui_comentario">Escribe aquí tu comentario</string>

    <!--Firma-->
    <string name="firma">Firma elecrónica</string>
    <string name="firma_aceptar">Aceptar</string>
    <string name="firma_corregir">Corregir</string>
    <string name="firma_leyenda">Además de la firma digital, se debe corroborar de manera física \n en el contrato de presentación de servicios</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="visitaregistradaconexito">Tu visita fue registrada con éxito.</string>
    <string name="nomre_dela_persona">Nombre:</string>
    <string name="direccion">Dirección:</string>


    <!--Reponse status codes-->
    <string name="statuscode400">El correo y la contraseña son requeridos</string>
    <string name="statuscode401">Correo o contraseña inválido</string>
    <string name="statuscode403">Confirma tu cuenta antes de iniciar sesión</string>
    <string name="statuscode404">No se encontró usuario</string>
    <string name="statuscode200">Bienvenido: </string>
    <string name="pregunta_porque_finaliza">¿Por qué se finalizó el cuestionario?</string>
    <string name="texto">Texto</string>
    <string name="bt_guardar">Guardar</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="poquecalificaasi">¿Por qué lo calificaría así?</string>
    <string name="pregunta_cuatro_info">La información que recibió respecto a la propiedad fue:</string>
    <string name="gracias">¡GRACIAS!</string>
    <string name="deseo_recibir_ofertas">Deseo recibir ofertas</string>


</resources>
