<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5"
    android:paddingTop="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:textAlignment="center"
        android:text="@string/pregunta_uno"
        android:textSize="@dimen/questions_size"
        android:textColor="@color/black"
        >
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.13"
        android:text="@string/tomandoreferencia"
        android:textSize="18sp"
        android:textAlignment="center">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:gravity="center_horizontal">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_below="@+id/button"
            android:orientation='horizontal'
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radio_grouppreguntauno">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uno"
                android:textStyle="bold"
                android:buttonTint="@color/edittextcolor"
                android:id="@+id/radioButton_uno"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dos"
                android:textStyle="bold"
                android:layout_marginLeft="25dp"
                android:buttonTint="@color/edittextcolor"
                android:id="@+id/radioButton_dos"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tres"
                android:textStyle="bold"
                android:layout_marginLeft="25dp"
                android:buttonTint="@color/edittextcolor"
                android:id="@+id/radioButton_tres"
                android:checked="false" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuatro"
                android:textStyle="bold"
                android:layout_marginLeft="25dp"
                android:buttonTint="@color/edittextcolor"
                android:id="@+id/radioButton_cuatro"
                android:checked="false" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cinco"
                android:textStyle="bold"
                android:layout_marginLeft="25dp"
                android:buttonTint="@color/edittextcolor"
                android:id="@+id/radioButton_cinco"
                android:checked="false" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seis"
                android:textStyle="bold"
                android:layout_marginLeft="25dp"
                android:buttonTint="@color/edittextcolor"
                android:id="@+id/radioButton_seis"
                android:checked="false" />

        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".7"
        android:gravity="center">
        <EditText
            android:layout_width="550dp"
            android:layout_height="150dp"
            android:padding="15dp"
            android:id="@+id/et_porquelocalificaasi"
            android:hint="@string/poquecalificaasi"
            android:background="@drawable/my_et_bg"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="350dp"
            android:layout_marginLeft="350dp"
            android:id="@+id/bt_siguiente_preguntauno"
            android:text="@string/siguiente"
            android:textColor="@color/white"
            android:background="@color/peach"
            />

    </LinearLayout>



</LinearLayout>