<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="600dp"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:gravity="right"
        android:weightSum="3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:paddingTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pregunta_porque_finaliza"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:paddingLeft="28dp"
                android:textColor="@color/black"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/texto"
                android:paddingLeft="5dp"
                android:gravity="top"
                android:id="@+id/porquefinalizoelcuestionario"
                android:background="@color/backgroundEditTexts"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_width="@dimen/ancho_btn_aceptar_cancelar"
                android:layout_height="@dimen/alto_btn_aceptar_cancelar"
                android:layout_marginRight="35dp"
                android:id="@+id/bt_dialogo_cancelar_finalizar"
                android:text="@string/bt_cancelar_dialogos"
                android:background="@drawable/my_button_bg"

                />
            <Button
                android:layout_width="@dimen/ancho_btn_aceptar_cancelar"
                android:layout_height="@dimen/alto_btn_aceptar_cancelar"
                android:text="@string/bt_guardar"
                style="@style/Btns_questions"
                android:textStyle="normal"
                android:id="@+id/bt_guardar_finalizar"
                android:background="@color/peach"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>