<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta_tres"
            android:textSize="@dimen/questions_size"
            android:textStyle="bold"
            android:textAlignment="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".9"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/presupuesto"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:background="@color/yellow_egg"
            style="@style/Btns_questions"
            android:text="@string/Negar"
            android:layout_marginRight="15dp"
            android:id="@+id/negar"/>
        <Button
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/Afirmar"
            style="@style/Btns_questions"
            android:background="@color/salmon_orange"
            android:id="@+id/aceptar"/>

    </LinearLayout>


</LinearLayout>