<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="800dp"
    android:layout_height="350dp"
    android:weightSum="2">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.8"
        android:background="@color/blue_marine"
        android:weightSum="2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/firma"
            android:textStyle="bold"
            android:textSize="19sp"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:layout_weight=".1"
            android:textColor="@color/titulo_dialogo_firma"/>
        <ImageButton

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/tache"
            android:id="@+id/cerrar"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/boton_redondo"
            android:layout_weight="1.9"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="800dp"
        android:layout_height="350dp"
        android:layout_weight=".1"
        android:weightSum="2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5">
            <com.github.gcacace.signaturepad.views.SignaturePad
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/signature_pad" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:gravity="center">
                <Button
                    android:layout_width="210dp"
                    android:layout_height="match_parent"
                    android:text="@string/firma_corregir"
                    android:textColor="@color/black"
                    android:id="@+id/clear_button"
                    android:background="@drawable/my_button_bg"
                    />
                <Button
                    android:layout_width="210dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:id="@+id/save_button"
                    android:text="@string/firma_aceptar"
                    style="@style/Btns_questions"
                    android:background="@color/salmon_orange"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:layout_weight=".6"
                android:text="@string/firma_leyenda"
                android:textAlignment="center">

            </TextView>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>