<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="800dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/comentario_al_propietario"
                android:textSize="@dimen/btns_questions"
                android:layout_marginTop="20dp"
                android:layout_weight="1.1"
                android:textAlignment="center"
                android:textColor="@color/black"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:padding="5dp"
           >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/peach"
                android:id="@+id/et_cometario_propietario"
                android:textAlignment="center"
                android:hint="@string/escribir_aqui_comentario"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dp"
                android:id="@+id/bt__dialogo_cancelar"
                android:text="@string/bt_cancelar_dialogos"
                android:background="@drawable/my_button_bg"

                />
            <Button
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/bt_aceptar_dialogos"
                android:id="@+id/bt_dialogo_aceptar"
                android:background="@color/titulo_asesor"
                style="@style/Btns_questions" />

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
